--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
   </head>
-  <body class="d-flex flex-column vh-100" id="app">
+  <body class="d-flex flex-column vh-100" style="background-color: #FAFAFA" id="app">
     <script type="module" src="/src/main.tsx"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
